--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.2",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
@@ -16,7 +18,10 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "eslint": "^7.24.0",
+    "prettier": "^2.2.1"
   },
   "private": true
 }
