--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.3",
     "redux": "^4.0.5"
   },
   "devDependencies": {
