--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-native-async-storage/async-storage": "^1.15.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.10",
+    "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
