--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
+    "expo-constants": "~9.3.3",
     "expo-font": "~8.4.0",
+    "expo-notifications": "~0.8.2",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
